static/style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html,
body {
    width: 100%;
    height: 100%;
}

body {
    display: flex;
    flex-direction: column;
    align-items: center;
}

body > header {
    display: flex;
    flex-direction: column;
    width: 100%;
}

main {
    flex-grow: 1;

    display: flex;
    width: 75%;
}

footer {
    display: flex;
    align-content: center;
    justify-content: center;
    flex-direction: column;
    width: 100%;
}

.posts-container {
    display: flex;
    width: 100%;
    flex-direction: column;
}

.post-header {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.center {
    text-align: center;
}

